--- a/number-theory/index.html
+++ b/number-theory/index.html
@@ -25,11 +25,11 @@
   <tr>
     <td>1</td>
     <td><a href="week1/lecture1.pdf">1.2: up to theorem 1.2</a></td>
-    <td><a href="week1/hwk1-1.pdf">Assignment 1 Part I</a></td>
+    <td><a href="week1/hw1-1.pdf">Assignment 1 Part I [80]</a></td>
     <td><a href="week1/lecture2.pdf">1.2: up to theorem 1.10</a></td>
-    <td><a href="week1/hwk1-2.pdf">Assignment 1 Part II</a></td>
+    <td><a href="week1/hw1-2.pdf">Assignment 1 Part II[31]</a></td>
     <td><a href="week1/lecture3.pdf">1.2: finish, 1.3: up to theorem 1.14</a></td>
-    <td><a href="week1/hwk1-3.pdf">Assignment 1 Part III</a></td>
+    <td><a href="week1/hw1-3.pdf">Assignment 1 Part III</a></td>
     <td><a href="week1/quiz.pdf">Quiz 1</a></td>
   </tr>
 
